<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background" >

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="38sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_margin="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_enter"
        android:textSize="24sp"
        android:onClick="buttonEnter"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/green"
        android:textColor="@color/white" />
</LinearLayout>