<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/description_logo" />

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_hello"
        android:textStyle="bold"
        android:textSize="38sp"
        android:background="@color/white_blur"
        android:textColor="@color/dark_green"
        android:shadowColor="@color/dark_green"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickChangeDrink"
            android:text="@string/coffee" />

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickChangeDrink"
            android:text="@string/tea" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_addition"
        android:textStyle="bold"
        android:textSize="38sp"
        android:background="@color/white_blur"
        android:textColor="@color/dark_green"
        android:shadowColor="@color/dark_green"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDrink" />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/milk"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition" />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/sugar"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxLemon"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/lemon"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition" />

    <TextView
        android:id="@+id/textViewTypeOfDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_drink"
        android:textStyle="bold"
        android:textSize="38sp"
        android:background="@color/white_blur"
        android:textColor="@color/dark_green"
        android:shadowColor="@color/dark_green"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSugar" />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:entries="@array/types_of_coffee"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTypeOfDrink" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:entries="@array/types_of_tea"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTypeOfDrink" />

    <ImageView
        android:id="@+id/imageViewButtonOrder"
        android:layout_width="234dp"
        android:layout_height="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClickMakeOrder"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoffee"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/button_order"
        android:contentDescription="@string/description_button_make_order" />

</androidx.constraintlayout.widget.ConstraintLayout>